# macos-UnifiedLogs

./: .changie.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LIBRARY.md  LICENSE  README.md  RUNNING.md  WIP.md  deny.toml  justfile  rustfmt.toml
.changes/: v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.4.0.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  v0.6.0.md
.changes/unreleased/: Added-20250225-004526.yaml  Added-20250605-020237.yaml  Added-20250605-020251.yaml  Added-20250808-184927.yaml  Added-20250808-184949.yaml  Added-20260418-212716.yaml  Added-20260419-185024.yaml  Added-20260421-230223.yaml  Changed-20250224-233352.yaml  Changed-20250224-233435.yaml  Changed-20250225-231102.yaml  Changed-20250226-233732.yaml  Changed-20250226-233803.yaml  Changed-20250605-020446.yaml  Changed-20251012-170239.yaml  Changed-20251223-203833.yaml  Changed-20260201-130155.yaml  Fixed-20250605-020350.yaml  Fixed-20250605-020516.yaml  Fixed-20250628-175251.yaml  Fixed-20250628-175304.yaml  Fixed-20260201-130105.yaml  Fixed-20260419-185053.yaml
.github/scripts/: package.sh
.github/workflows/: audit.yml  cross-release.yml  deny.yml  publish.yml  pullrequest.yml  release.yml  rust.yml
benches/: big_sur_benchmark.rs  high_sierra_benchmark.rs  monterey_benchmark.rs
examples/: Cargo.toml  dump_common.rs
examples/dump/: Cargo.toml
examples/dump/src/: dump_helpers.rs  main.rs
examples/dump_common/: mod.rs
examples/dump_compat/: Cargo.toml
examples/dump_compat/src/: main.rs
examples/dump_legacy/: Cargo.toml
examples/dump_legacy/src/: main.rs
examples/dump_rewrite/: Cargo.toml
examples/dump_rewrite/src/: main.rs
examples/logrs/: Cargo.toml  README.md
examples/logrs/src/: main.rs  writer.rs
examples/logrs/src/viewer/: mod.rs  show.rs
examples/parse_tracev3/: Cargo.toml
examples/parse_tracev3/src/: main.rs
examples/unifiedlog_iterator/: Cargo.toml
examples/unifiedlog_iterator/src/: bookmark.rs  logger.rs  main.rs
examples/unifiedlog_parser/: Cargo.toml
examples/unifiedlog_parser/src/: main.rs
examples/unifiedlog_parser_json/: Cargo.toml
examples/unifiedlog_parser_json/src/: main.rs
src/: bookmark.rs  cache.rs  catalog.rs  chunkset.rs  constants.rs  dsc.rs  error.rs  filesystem.rs  format.rs  header.rs  iterator.rs  lib.rs  log_data_iterator.rs  logarchive.rs  message.rs  noalloc_iterator.rs  parser.rs  preamble.rs  resolve.rs  string_resolver.rs  timesync.rs  tracev3.rs  tracev3_stream.rs  traits.rs  unified_log.rs  util.rs  uuidtext.rs
src/chunks/: mod.rs  oversize.rs  simpledump.rs  statedump.rs
src/chunks/firehose/: activity.rs  body.rs  entry.rs  firehose_log.rs  flags.rs  item.rs  loss.rs  message.rs  nonactivity.rs  signpost.rs  trace.rs
src/compat/: cache.rs  filesystem.rs  iterator.rs  mod.rs  parser.rs  traits.rs  unified_log.rs
src/decoders/: bool.rs  config.rs  darwin.rs  decoder.rs  dns.rs  location.rs  mod.rs  network.rs  opendirectory.rs  time.rs  uuid.rs
src/legacy/: cache.rs  chunkset.rs  dsc.rs  error.rs  filesystem.rs  header.rs  iterator.rs  message.rs  mod.rs  parser.rs  timesync.rs  traits.rs  unified_log.rs  util.rs  uuidtext.rs
src/legacy/chunks/: oversize.rs  simpledump.rs  statedump.rs
src/legacy/chunks/firehose/: activity.rs  firehose_log.rs  flags.rs  loss.rs  message.rs  mod.rs  nonactivity.rs  signpost.rs  trace.rs
src/legacy/decoders/: darwin.rs  decoder.rs  location.rs  mod.rs  opendirectory.rs  uuid.rs
src/rewrite/: catalog.rs  chunk.rs  chunks.rs  chunks_reader.rs  dsc.rs  error.rs  filesystem.rs  format.rs  header.rs  helpers.rs  log_entry.rs  logarchive.rs  mod.rs  resolve.rs  timesync.rs  tracev3.rs  uuidtext.rs
src/rewrite/chunks/: mod.rs  oversize.rs  simpledump.rs  statedump.rs
src/rewrite/chunks/firehose/: activity.rs  entry.rs  flags.rs  item.rs  loss.rs  mod.rs  nonactivity.rs  signpost.rs  trace.rs
src/rewrite/chunkset/: mod.rs  oversize.rs  statedump.rs
src/rewrite/chunkset/firehose/: body.rs  entry.rs  item.rs  loss.rs  mod.rs  nonactivity.rs  signpost.rs
src/rewrite/decoders/: config.rs  darwin.rs  decoder.rs  dns.rs  location.rs  mod.rs  network.rs  opendirectory.rs  time.rs  uuid.rs
tests/: big_sur_rewrite_tests.rs  big_sur_tests.rs  big_sur_tests_compat.rs  big_sur_tests_rewrite.rs  example_tests.rs  high_sierra_tests.rs  high_sierra_tests_compat.rs  monterey_tests.rs  monterey_tests_compat.rs  ordering_parity.rs  tahoe_tests.rs  tahoe_tests_compat.rs
