[package]
name = "macos-unifiedlogs"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mandiant/macos-unifiedlogs"
description = "A library to help parse macOS UnifiedLogs"
keywords = ["forensics", "macOS", "unifiedlog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rewrite"]
rewrite = []
rewrite-compat = ["rewrite"]

[dependencies]
nom = "8.0.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
lz4_flex = "0.13.0"
byteorder = "1.5.0"
plist = "1.9.0"
regex = "1.12.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
walkdir = "2.5.0"
sunlight = "0.1.5"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2"
num_enum = "0.7"
bitflags = "2.11"

[dev-dependencies]
criterion = "0.8.2"
anyhow = "1.0.102"
test-case = "3.3"
pretty_env_logger = "0.4.0"

[[bench]]
name = "high_sierra_benchmark"
harness = false

[[bench]]
name = "big_sur_benchmark"
harness = false

[[bench]]
name = "monterey_benchmark"
harness = false
