[package]
name = "macos-unifiedlogs"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mandiant/macos-unifiedlogs"
description = "A library to help parse macOS UnifiedLogs"
keywords = ["forensics", "macOS", "unifiedlog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
lz4_flex = "0.13.1"
byteorder = "1.5.0"
plist = "1.9.0"
regex = "1.12.4"
base64 = "0.22.1"
chrono = "0.4.45"
walkdir = "2.5.0"
sunlight = "0.2.0"

[dev-dependencies]
chrono = "0.4.45"
criterion = "0.8.2"
anyhow = "1.0.103"
test-case = "3.3"

[[bench]]
name = "high_sierra_benchmark"
harness = false

[[bench]]
name = "big_sur_benchmark"
harness = false

[[bench]]
name = "monterey_benchmark"
harness = false
