[package]
name = "logrs"
version = "0.1.0"
edition = "2024"

[dependencies]
simplelog = "0.12.2"
chrono = "0.4.45"
log = "0.4.33"
serde_json = "1.0.150"
macos-unifiedlogs = { path = "../..", default-features = false, features = ["rewrite"] }
clap = { version = "4.6.1", features = ["std", "help", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.4", default-features = false, features = ["v4", "serde"] }
