[package]
name = "unifiedlog_iterator"
version = "0.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
chrono = "0.4.45"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
serde_json = "1.0.150"
macos-unifiedlogs = { path = "../../" }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
libc = "0.2.186"
