[package]
name = "unifiedlog_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.12.0"
csv = "1.1.6"
chrono = "0.4.19"
log = "0.4.14"
macos-unifiedlogs = {path = "../../"}
clap = {version = "3.2.22", features = ["derive"]}